# DocReader

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  extractor.py  graph.py  groq_client.py  history.py  main.py  multilingual.py  storage.py  vectorstore.py
static/: index.html
